# mangaDown

./: .gitignore  Cargo.toml  README.md  build.bat  clean.py  combine.py  cover.py  main.py  manga4life.py  mangadex.py  mangakakalot.py  misc.py
.cargo/: config.toml
src/: main.rs  utils.rs
src/misc/: clean.py  combine.py  misc.py  mod.rs  prompt.py  prompt.rs  utils.rs
src/sites/: m4l.rs  manga4life.py  mangadex.py  mangakakalot.py  manganelo.py  mod.rs
