[package]
name = "mig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
camino = "1.1.6"
promptly = "0.3.1"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
url = "2.5.0"
zip = "0.6.6"
zip-extensions = "0.6.2"
