[package]
name = "manga-down"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1.5.0"
camino = "1.1.6"
promptly = "0.3.1"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3.29"
url = "2.5.0"
zip = "0.6.6"
zip-extensions = "0.6.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"